feat: initial commit of smartfactory anomaly dashboard

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,34 @@
-/__pycache__
-__pycache__
+# Python
+__pycache__/
+*.pyc
+*.pyo
+*.pyd
+*.egg-info/
+dist/
+build/
+
+# Virtual env
+.venv/
+venv/
+
+# Jupyter/Streamlit
+.ipynb_checkpoints/
+.streamlit/
+logs/
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Env/keys
 .env
-venv
-/venv
+.env.*
+
+# Data (필요에 맞게 조정)
+data/
+*.csv
+*.txt
+
+# IDE
+.vscode/
+.history/
